--- a/chatgptopenai/wwwroot/appsettings.json
+++ b/chatgptopenai/wwwroot/appsettings.json
@@ -1,4 +1,4 @@
 {
-  "ApiUrl": "https://api.openai.com/v1/completions",
-  "ApiKey": "Insert your ChatGPT API Key here"
+  "ApiUrl": "https://api.openai.com/v1/chat/completions",
+  "ApiKey": "insert your API Key here"
 }
